@@ -76,17 +76,29 @@ class Graph(dict):
 
     def del_edge(self, edge):
         """Remove an edge from the graph."""
-        self[edge.source].remove(edge.target)
+        if isinstance(edge, Edge):
+            source, target = edge.source, edge.target
+        else:
+            source, target = edge   # tuple or list
+        self[source].remove(target)
         if not self.is_directed():
-            self[edge.target].remove(edge.source)
+            self[target].remove(source)
 
     def has_edge(self, edge):
         """Test if an edge exists (the weight is not checked)."""
-        return edge.source in self and edge.target in self[edge.source]
+        if isinstance(edge, Edge):
+            source, target = edge.source, edge.target
+        else:
+            source, target = edge   # tuple or list
+        return source in self and target in self[source]
 
     def weight(self, edge):
         """Return the edge weight or zero."""
-        if edge.source in self and edge.target in self[edge.source]:
+        if isinstance(edge, Edge):
+            source, target = edge.source, edge.target
+        else:
+            source, target = edge   # tuple or list
+        if source in self and target in self[source]:
             return 1
         else:
             return 0
